# pLannotate

./: .claudeignore  .gitignore  BLAST_hit_details.py  CLAUDE.md  FAQ.html  FAQ.md  README.md  REPO_REVIEW.md  V2_RELEASE_PLAN.md  annotate.py  annotate2.py  annotate3.py  blurb.html  bokeh_arc_toy.py  bokeh_ex.py  bokeh_plot.py  citation_funding.html  cmd.txt  colors.csv  colors2.csv  config.toml  create_db.ipynb  environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment.yml  example.txt  example_command.txt  feature_notes.csv  feature_orientation.csv  gbk_to_df.py  generate_notes_on_features.py  orf.py  out.blast  pLannotate.py  pLannotate_app.py  pLannotate_streamlit.py  plannotate.smk  pyproject.toml  pyrightconfig.json  (+6 more)
.claude/: settings.local.json
.cursor/rules/: project-description.mdc  python-general-style.mdc  snakerules.mdc  testing.mdc
.github/workflows/: conda-test.yml  mypy.yml  python-package-conda.yml  release-assets.yml  ruff.yml
.streamlit/: config.toml
BLAST_dbs/: full_snapgene_feature_list_w_types_db.nhr  full_snapgene_feature_list_w_types_db.nin  full_snapgene_feature_list_w_types_db.nog  full_snapgene_feature_list_w_types_db.nsd  full_snapgene_feature_list_w_types_db.nsi  full_snapgene_feature_list_w_types_db.nsq
data/: addgene_CDS_20-9-3.fasta  addgene_collected_features_test_20-12-11_description.csv  colors.csv  crawl_addegne.sh  fpbase.dmnd  fpbase_20-9-2.fasta  fpbase_raw_20-9-2.csv  snapgene_features_20-9-3.csv
data/addgene_features_20-9-3/: 10xHis.gb  12Pk tag.gb  13xMyc.gb  2u ori (2).gb  2u ori (3).gb  2u ori (4).gb  2u ori (5).gb  2u ori.gb  2xFLAG.gb  2xGTIIC.gb  3' CeU6.gb  3' LTR (2).gb  3' LTR (Delta-U3) (2).gb  3' LTR (Delta-U3) (3).gb  3' LTR (Delta-U3).gb  3' LTR.gb  3' beta-globin insulator.gb  3' miR-155.gb  3' miR-30a (2).gb  3' miR-30a.gb  35SPPDK promoter.gb  3xFLAG (2).gb  3xFLAG (3).gb  3xFLAG.gb  3xHA (2).gb  3xHA.gb  3xMyc.gb  5' LTR (2).gb  5' LTR (3).gb  5' LTR (truncated) (2).gb  5' LTR (truncated) (3).gb  5' LTR (truncated) (4).gb  5' LTR (truncated).gb  5' LTR.gb  5' beta-globin insulator.gb  5' miR-155.gb  5' miR-30a (2).gb  5' miR-30a.gb  5X UAS.gb  5xFLAG.gb  (+1311 more)
data/addgene_gbks/: _00_00_100000_addgene-plasmid-61101-sequence-100000.gbk  _00_00_10000_addgene-plasmid-21797-sequence-10000.gbk  _00_00_120000_addgene-plasmid-67055-sequence-120000.gbk  _00_00_130000_addgene-plasmid-70876-sequence-130000.gbk  _00_00_140000_addgene-plasmid-73683-sequence-140000.gbk  _00_00_170000_addgene-plasmid-84502-sequence-170000.gbk  _00_00_180000_addgene-plasmid-98189-sequence-180000.gbk  _00_00_190000_addgene-plasmid-100926-sequence-190000.gbk  _00_00_20000_addgene-plasmid-13724-sequence-20000.gbk  _00_00_210000_addgene-plasmid-111784-sequence-210000.gbk  _00_00_230000_addgene-plasmid-120973-sequence-230000.gbk  _00_00_240000_addgene-plasmid-125411-sequence-240000.gbk  _00_00_250000_addgene-plasmid-127260-sequence-250000.gbk  (+4967 more)
docs/: architecture.md
fastas/: pACYC184.fa  pBTK562.fa  pCA-mTmG.fa  pCMVR8.74.fa  pPAGFP-C.fa  pPF25.fa  pSC101.fa  pUC19.fa  pXampl3.fa
images/: paper.b64  twitter.b64
jupyter_notebooks/: annotate_test.ipynb  annotating_arbitrary_proteins.ipynb  creating_dbs_plannotate.ipynb  exploring_JBEI-ICE.ipynb  exploring_addgene_json.ipynb  exploring_genocad.ipynb  exploring_iGEM.ipynb  hits.csv  test.blast
misc_scipts/: annotate_original_method.py  generate_notes_on_features.py
old_versions/: pLannotate_streamlit_v01.py
plannotate/: BLAST_hit_details.py  REFACTORING_SUMMARY.md  Snakefile  __init__.py  _annotation_worker.py  _concurrency.py  _filter.py  _package_data.py  _rotate.py  _schema.py  _sqlite.py  annotate.py  annotate_original.py  api.py  bokeh_plot.py  config.yaml  databases.yml  filter_annotations.py  infernal.py  logging_config.py  main.py  models.py  pLannotate.py  pLannotate_app.py  resources.py  search.py  sqlite_utils.py  streamlit_app.py  test_pipeline_compatibility.py  validation.py
plannotate/_tools/: blast.py  (+5 more)
scripts/: plot_databases.py
tests/: __init__.py  annotation_control_utils.py  conftest.py  manual_jupyter_test.ipynb  test_adapters.py  test_annotate.py  test_annotation_control_report.py  test_annotation_controls.py  test_annotation_integration.py  test_annotation_workflow.py  test_blast.py  test_bokeh_plot.py  test_clean.py  test_cli.py  test_cli_integration.py  test_concurrency.py  test_database_bundle.py  test_database_creator.py  test_database_fingerprint.py  test_example_fasta_annotations.py  test_filter.py  test_gather_databases.py  test_infernal.py  test_jupyter_notebook.py  test_models.py  test_module_docstrings.py  test_package_data.py  test_records.py  test_resources.py  test_rotate.py  test_rotate_integration.py  test_search.py  test_sqlite_utils.py  test_streamlit_app.py  test_units.py  test_validation.py
tools/: annotation_controls.py  benchmark_annotation_cores.py
(+151 files in other folders)
