[project]
name = "plannotate"
version = "1.2.5.dev"
description = "Webserver and command line tool for annotating engineered plasmids"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Matt McGuffie", email = "mmcguffi@gmail.com"},
]
dependencies = [
    "altair==4.2.2",
    "biopython>=1.78",
    "bokeh==2.4.3",
    "click",
    "numpy==1.23; python_version < '3.12'",
    "numpy>=1.26; python_version >= '3.12'",
    "pandas>=1.3.5,<2; python_version == '3.10'",
    "pandas>=1.3.5,<3; python_version > '3.10'",
    "protobuf>=3.20.3",
    "ripgrep>=13",
    "streamlit>=1.36,<1.42",
    "tabulate>=0.8.9",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
plannotate = "plannotate.pLannotate:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plannotate"]
include-package-data = true
package-data = { plannotate = ["data/**/*"] }
