[project]
name = "plannotate"
version = "1.2.5"
description = "Webserver and command line tool for annotating engineered plasmids"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Matt McGuffie", email = "mmcguffi@gmail.com"},
]
dependencies = [
    "altair==4.2.2",
    "biopython>=1.78",
    "bokeh==2.4.3",
    "click",
    "numpy==1.23.*; python_version < '3.12'",
    "numpy>1,<2; python_version >= '3.12'",
    "pandas>=1.3.5,<2; python_version == '3.10'",
    "pandas>=1.3.5,<3; python_version > '3.10'",
    "protobuf>=3.20.3",
    "streamlit>=1.36,<1.42",
    "tabulate>=0.8.9",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist", "nbclient", "nbformat", "ipykernel"]
lint = ["ruff>=0.8"]

[project.scripts]
plannotate = "plannotate.pLannotate:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plannotate"]
include-package-data = true
package-data = { plannotate = ["data/**/*"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -p no:cacheprovider"
markers = [
    "integration: tests that require external bioinformatics tools, downloaded databases, or runtime app entry points",
    "timeout(seconds): override the per-test timeout; use 0 to disable",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
