[project]
name = "plannotate"
version = "2.0.0"
description = "Annotate engineered DNA sequences and plasmids"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Matt McGuffie", email = "mmcguffi@gmail.com" },
]
dependencies = [
    "biopython>=1.81",
    "numpy>=1.23",
    "pandas>=1.5,<3",
    "PyYAML>=6",
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
test = [
    "bokeh>=3.4,<4",
    "build>=1.2",
    "ipykernel",
    "nbclient",
    "nbformat",
    "pytest>=8",
    "pytest-cov",
    "pytest-xdist",
    "requests>=2.31",
]
plot = [
    "bokeh>=3.4,<4",
]
lint = [
    "mypy>=1.10",
    "pandas-stubs",
    "ruff>=0.8",
    "types-PyYAML",
]
databases = [
    "requests>=2.31",
    "snakemake>=8",
]

[project.scripts]
plannotate = "plannotate.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plannotate"]
include-package-data = false

[tool.setuptools.package-data]
plannotate = [
    "data/data/*.csv",
    "data/data/*.yml",
    "data/fastas/*",
    "data/images/*",
    "data/templates/*",
    "gather_databases/*.md",
    "gather_databases/*.smk",
    "gather_databases/fpbase/*.py",
    "gather_databases/rfam/*.py",
    "gather_databases/scripts/*.py",
    "gather_databases/snapgene/*.py",
    "gather_databases/swissprot/*.csv",
    "gather_databases/swissprot/*.py",
]

[tool.setuptools.exclude-package-data]
plannotate = [
    "data/BLAST_dbs/*",
    "data/diamond_dbs/*",
    "data/infernal_dbs/*",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -p no:cacheprovider -ra"
markers = [
    "integration: requires external bioinformatics tools or downloaded databases",
    "timeout(seconds): override the default test timeout; use 0 to disable",
]
filterwarnings = [
    "error::ResourceWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["plannotate/gather_databases/gathered_data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
files = ["plannotate", "tests"]
show_error_codes = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]
exclude = ["plannotate/gather_databases/gathered_data"]
